tests/rt/pos/core/fwrite02.trp
fwrite (stderr authority, "42\n")
