tests/rt/neg/core/serialize03.trp
save (authority,"serialize03", exit)